--- a/style.css
+++ b/style.css
@@ -290,12 +290,13 @@ p{
         width: 90%;
     }
     .hero-flower img{
-    max-width: 25.5rem;   
+    max-width: 25.5rem;
+       
 }
 
 
 .noto-serif-normal{
-    margin-left: 38px;
+    margin-left: 30px;
     max-width: 393px;
 }
 
@@ -351,7 +352,7 @@ p{
 .flower-store{
     max-width: 85%;
     margin-top: -100px;
-    margin-left: 23px;
+    margin-left: 17px;
 }
 
 .plant-lover{
@@ -411,7 +412,12 @@ p{
 
 
 .background{
-    width: 30rem;
+    width: 24.8rem;
+    margin-left: 40px;
+}
+
+.background img{
+    width: 37.6rem;
 }
 .bunch{
     font-size: 30px;
@@ -426,9 +432,7 @@ p{
     margin-top: 7rem;
     width: 50%;
 }
-.subscribe button{
-    
-}
+
 .footer-last{
   display: grid;
   grid-template-columns: 1fr;
